--- a/home_page/home_page.css
+++ b/home_page/home_page.css
@@ -10,6 +10,25 @@ body{background: #000000;
     font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
+.dropdownchris {
+    position: relative;
+    display: inline-block;
+  }
+  
+.dropdown-contentchris {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+.dropdownchris:hover .dropdown-contentchris {
+    display: block;
+  }
+
 h1{
     font-size: 45px; /*psuedoclass*/
     color:white;
@@ -18,6 +37,12 @@ h1{
     word-spacing: 5px;
     text-shadow:2px 2px teal;
     font-weight: bold;
+}
+
+.blurb{
+    color: white;
+    font-size: 200px;
+
 }
 
 h5{
